--- a/pages/project/project.wxml
+++ b/pages/project/project.wxml
@@ -1,6 +1,10 @@
 <!--pages/project/project.wxml-->
 <!--index.wxml-->
 <view>
+  <view class="flex-row" bindtap="search">
+    <icon class='flwx-view-item' size='18' type='search'></icon>
+    <input class="flwx-view-item" disabled placeholder="输入关键字搜索" />
+  </view>
   <i-cell-group>
     <i-cell wx:for="{{items}}" title="{{ item.name }}" is-link url="/pages/staff_list/staff_list?type=1&name={{ item.name }}&id={{ item.id }}"></i-cell>
   </i-cell-group>
